--- a/X/src/app/page.module.css
+++ b/X/src/app/page.module.css
@@ -4,6 +4,7 @@
     width: 100vw;
     height: 100vh;
 }
+
 .left {
     flex: 1;
     display: flex;
@@ -11,31 +12,37 @@
     justify-content: center;
     flex-direction: column;
 }
+
 .left img {
     width: 341px;
     height: auto;
 }
+
 .right {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 .right h1 {
     font-weight: bold;
     font-size: 64px;
     margin: 48px 0;
 }
+
 .right h2 {
     font-weight: bold;
     font-size: 31px;
     margin-bottom: 32px;
 }
+
 .right h3 {
     font-weight: bold;
     font-size: 17px;
     margin: 40px 0 20px;
 }
+
 .signup {
     display: flex;
     align-items: center;
@@ -48,9 +55,11 @@
     transition: .2s;
     box-sizing: border-box;
 }
+
 .signup:hover {
     background: rgba(29, 155, 240, .8);
 }
+
 .login {
     display: flex;
     align-items: center;
@@ -62,6 +71,7 @@
     transition: .2s;
     border-radius: 100px;
 }
+
 .login:hover {
-    background: rgba(29,155,240, .1)
+    background: rgba(29, 155, 240, .1)
 }
