--- a/X/src/app/(beforeLogin)/_component/modal.module.css
+++ b/X/src/app/(beforeLogin)/_component/modal.module.css
@@ -19,7 +19,7 @@
     border-radius: 16px;
     display: flex;
     flex-direction: column;
-    
+
 }
 
 .modalHeader {
@@ -27,6 +27,7 @@
     font-size: 31px;
     font-weight: bold;
 }
+
 .modalHeader h1 {
     color: #000;
 }
@@ -41,6 +42,7 @@
     background: #fff;
     color: #000;
 }
+
 .title {
     font-size: 24px;
 }
@@ -57,6 +59,7 @@
     position: relative;
     margin: 12px 0;
 }
+
 .inputLabel {
     width: 100%;
     display: inline-block;
@@ -68,15 +71,18 @@
     color: rgb(83, 100, 113);
     transition: .2s;
 }
+
 .inputLabel span {
     position: absolute;
     top: 8px;
     left: 8px;
 }
+
 .inputLabel:focus-within {
     color: blue;
     font-size: 11px;
 }
+
 .input {
     width: 100%;
     border: none;
@@ -101,11 +107,13 @@
     cursor: pointer;
     border: none;
 }
+
 .actionButton:disabled {
     opacity: 0.5;
 }
+
 .actionButton:hover {
-    background-color: rgb(39,44,48);
+    background-color: rgb(39, 44, 48);
 }
 
 .closeButton {
@@ -122,6 +130,12 @@
     align-items: center;
     justify-content: center;
 }
+
 .closeButton:hover {
-    background-color: rgba(15,20,25, 0.1);
+    background-color: rgba(15, 20, 25, 0.1);
+}
+
+.error {
+    font-weight: bold;
+    color: red;
 }
