--- a/X/src/app/(afterLogin)/home/home.module.css
+++ b/X/src/app/(afterLogin)/home/home.module.css
@@ -9,3 +9,33 @@
     flex-direction: column;
     align-items: stretch;
 }
+
+@media all and (min-width: 687px) {
+    .main {
+        width: 600px;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    .main {
+        border-color: rgb(239, 243, 244);
+    }
+}
+
+@keyframes rotate {
+    0% {
+        rotate: 0;
+    }
+
+    50% {
+        rotate: 180deg;
+    }
+
+    100% {
+        rotate: 0;
+    }
+}
+
+.loader {
+    animation: rotate 5s infinite;
+}
