--- a/X/src/app/(beforeLogin)/_component/modal.module.css
+++ b/X/src/app/(beforeLogin)/_component/modal.module.css
@@ -139,3 +139,10 @@
     font-weight: bold;
     color: red;
 }
+
+.message {
+    color: red;
+    display: flex;
+    justify-content: center;
+    font-weight: bold;
+}
