feat: 서로 다른 컴포넌트간 query 일치하게 하기

--- a/X/src/app/(afterLogin)/[username]/profile.module.css
+++ b/X/src/app/(afterLogin)/[username]/profile.module.css
@@ -69,8 +69,18 @@
     cursor: pointer;
 }
 
+.followButton.followed {
+    background: white;
+    color: black;
+    border: 1px solid grey;
+}
+
 .followButton:hover {
     background-color: rgb(39, 44, 48);
+}
+
+.followButton.followed:hover {
+    background-color: lightgray;
 }
 
 .backButton {
