feat: 완전히 로그아웃 하기 & 프론트 서버에서 쿠키 보내기

--- a/X/src/app/(afterLogin)/[username]/profile.module.css
+++ b/X/src/app/(afterLogin)/[username]/profile.module.css
@@ -24,16 +24,35 @@
 
 .userZone {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     border-bottom: 1px solid rgb(239, 243, 244);
     padding: 12px 16px;
+    align-items: flex-start;
 }
+
+.userRow {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+}
+
+.userFollower {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding-top: 8px;
+}
+
 
 .userImage {
     display: flex;
     align-items: center;
     margin-right: 12px;
     border-radius: 50%;
+    width: 134px;
+    height: 134px;
+    border: 1px solid lightgray;
 }
 
 .userImage img {
@@ -69,18 +88,18 @@
     cursor: pointer;
 }
 
+.followButton:hover {
+    background-color: rgb(39, 44, 48);
+}
+
 .followButton.followed {
     background: white;
     color: black;
     border: 1px solid grey;
 }
 
-.followButton:hover {
-    background-color: rgb(39, 44, 48);
-}
-
 .followButton.followed:hover {
-    background-color: lightgray;
+    background: lightgray;
 }
 
 .backButton {
