--- a/X/src/app/(afterLogin)/_component/post/styles/post.module.css
+++ b/X/src/app/(afterLogin)/_component/post/styles/post.module.css
@@ -23,7 +23,7 @@
     display: flex;
     align-items: center;
     color: rgb(83, 100, 113);
-    margin-left: 24px;
+    margin-bottom: 15px;
     font-size: 13px;
     line-height: 20px;
 }
