--- a/X/src/app/(afterLogin)/layout.module.css
+++ b/X/src/app/(afterLogin)/layout.module.css
@@ -46,14 +46,16 @@
 }
 
 .logo {
-    display: inline-block;
+    display: flex;
     height: 56px;
     margin-top: 2px;
+    align-items: center;
+    padding: 0 12px;
 }
 
 .logoPill {
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 27px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
